added bibtex file and avail. vs interr. chapter

--- a/CML_Seminar_Template.bib
+++ b/CML_Seminar_Template.bib
@@ -1,3 +1,13 @@
+@inproceedings{Fetter2018,
+   Author = {Fetter, Mirko and Müller, Anna-Lena and Vasilyev, Petr and Barth, Laura Marie and Gross, Tom},
+   Title = {Towards a Better Understanding of Availability and Interruptibility with Mobile Availability Probes},
+   BookTitle = {Proceedings of 16th European Conference on Computer-Supported Cooperative Work},
+   Address= {Helsinki, Finland},
+   Publisher = {Kluwer Academic Publishers},
+   Pages = {16-17},
+   Year = {2018} }
+   
+   
 @misc{Bal1994,
    Author = {Balasubramanian, Venkatraman},
    Title = {State of the Art Review on Hypermedia Issues and Applications},
