--- a/CML_Seminar_Template.bib
+++ b/CML_Seminar_Template.bib
@@ -7,7 +7,10 @@
    Pages = {16-17},
    Year = {2018} }
    
-   
+@inproceedings{Birnholtz2010,
+	Author = {Birnholtz, J., Guillory, J., Hancock, J. and Bazarova, N.},
+	Title = {Deceptive Texting and Interpersonal Awareness Narratives}
+
 @misc{Bal1994,
    Author = {Balasubramanian, Venkatraman},
    Title = {State of the Art Review on Hypermedia Issues and Applications},
