--- a/CML_Seminar_Template.bib
+++ b/CML_Seminar_Template.bib
@@ -1,15 +1,64 @@
 @inproceedings{Fetter2018,
-   Author = {Fetter, Mirko and Müller, Anna-Lena and Vasilyev, Petr and Barth, Laura Marie and Gross, Tom},
-   Title = {Towards a Better Understanding of Availability and Interruptibility with Mobile Availability Probes},
-   BookTitle = {Proceedings of 16th European Conference on Computer-Supported Cooperative Work},
-   Address= {Helsinki, Finland},
-   Publisher = {Kluwer Academic Publishers},
-   Pages = {16-17},
-   Year = {2018} }
+  title={Towards a Better Understanding of Availability and Interruptibility with Mobile Availability Probes},
+  author={Fetter, Mirko and M{\"u}ller, Anna-Lena and Vasilyev, Petr and Barth, Laura Marie and Gross, Tom},
+  booktitle={Proceedings of 16th European Conference on Computer-Supported Cooperative Work-Exploratory Papers},
+  year={2018},
+  organization={European Society for Socially Embedded Technologies (EUSSET)}
+}
    
 @inproceedings{Birnholtz2010,
-	Author = {Birnholtz, J., Guillory, J., Hancock, J. and Bazarova, N.},
-	Title = {Deceptive Texting and Interpersonal Awareness Narratives}
+  title={On my way: Deceptive texting and interpersonal awareness narratives},
+  author={Birnholtz, Jeremy and Guillory, Jamie and Hancock, Jeff and Bazarova, Natalya},
+  booktitle={Proceedings of the 2010 ACM conference on Computer supported cooperative work},
+  pages={1--4},
+  year={2010},
+  organization={ACM}
+}
+
+@article{Piszczek2014,
+  title={Expanding the boundaries of boundary theory: Regulative institutions and work--family role management},
+  author={Piszczek, Matthew M and Berg, Peter},
+  journal={Human Relations},
+  volume={67},
+  number={12},
+  pages={1491--1512},
+  year={2014},
+  publisher={Sage Publications Sage UK: London, England}
+}
+
+@article{Hecht2009,
+  title={A longitudinal examination of the work--nonwork boundary strength construct},
+  author={Hecht, Tracy D and Allen, Natalie J},
+  journal={Journal of Organizational Behavior: The International Journal of Industrial, Occupational and Organizational Psychology and Behavior},
+  volume={30},
+  number={7},
+  pages={839--862},
+  year={2009},
+  publisher={Wiley Online Library}
+}
+
+@article{Ashforth2000,
+  title={All in a day's work: Boundaries and micro role transitions},
+  author={Ashforth, Blake E and Kreiner, Glen E and Fugate, Mel},
+  journal={Academy of Management review},
+  volume={25},
+  number={3},
+  pages={472--491},
+  year={2000},
+  publisher={Academy of Management Briarcliff Manor, NY 10510}
+}
+
+@article{Lindfors2006,
+  title={On-call stress among Finnish anaesthetists},
+  author={Lindfors, PM and Nurmi, KE and Meretoja, OA and Luukkonen, RA and Viljanen, A-M and Leino, TJ and H{\"a}rm{\"a}, M I},
+  journal={Anaesthesia},
+  volume={61},
+  number={9},
+  pages={856--866},
+  year={2006},
+  publisher={Wiley Online Library}
+}
+
 
 @misc{Bal1994,
    Author = {Balasubramanian, Venkatraman},
