--- a/CML_Seminar_Template.tex
+++ b/CML_Seminar_Template.tex
@@ -22,54 +22,56 @@ Another study lists symptoms for mental, cognitive and behavioural effects. Tabl
 
 \section{The domain of on-call service}
 
+\begin{figure}[htb]
+  \begin{center}
+   \includegraphics{Boundary_sketch_small.PNG}
+  % \scalebox{.5}{\input{pager.jpg}}
+  \end{center}
+    \caption{\label{Boundary_sketch_fig}  Sketch depicting an on-call service worker in his domain and boundary. }
+\end{figure}
+
 \subsection{Effects on health}
 
-Text in Times 12; height 15. No indenting for first paragraph. No indenting for first paragraph. No indenting for first paragraph. No indenting for first paragraph. 
+In a 2006 study in Finland \cite[]{Lindfors2006}, researchers looked deeply into on-call stress and the effects among anaesthetists. Anaesthesia is a state of temporary induced loss of awareness or sensation. An anaesthetists is a physician trained in this field of medicine. In the questionnaire, an abundance of symptoms was asked about. A selection of a few of these symptoms was collected (cf. Table ~\ref{CML_Seminar_Template_tab1}). Reports of the symptom were compared between workers being currently on-call service or the day after and those on vacation for at least two weeks. It can be seen that for the selected symptoms, the report rates for on-call service are significantly higher. This is representative for the entirety of symptoms that was evaluated in the questionnaire. The symptoms involve mental, cognitive and behavioural kinds. They type of symptoms illustrate how severe the effects of on-call service are.
 
-\begin{itemize}
-\item Bullet list (Times 12; height 15; indenting 5 mm) 
-\item Bullet list (Times 12; height 15; indenting 5 mm) 
-\end{itemize}
-
-Subsequent paragraphs should have same font and layout, but with 5 mm indenting in the first line. 
-
-\begin{enumerate}
-\item Numbered list (Times 12; height 15; indenting 5 mm)
-\item Numbered list (Times 12; height 15; indenting 5 mm)
-\end{enumerate}
- 
-\subsubsection{Heading 3 (Times 12; 12 Pt above; 6 Pt below; flush left)}
-
-Text in Times 12; height 15. No indenting for first paragraph. No indenting for first paragraph. No indenting for first paragraph. No indenting for first paragraph. 
-
-And tables are referenced in the text like this (cf. Table ~\ref{CML_Seminar_Template_tab1}).
 
 \begin{table}
 \begin{center}
-\begin{tabular}{ |c|c|} 
+\begin{tabular}{ |c|c|c|} 
  \hline
- Key & Value \\
+ Symptom & On-call \% & On vacation \% \\
  \hline
- X & A \\
+ Tearfulness, depression & 23,2 & 3,3 \\
+ \hline
+ Memory disturbances & 45,8 & 9,5 \\
+ \hline
+ Need for alcohol & 30,5 & 18,4 \\
+ \hline
+ Need for sleeping medicine & 15,8 & 5,0 \\
+ \hline
+ Bulimia & 16,2 & 6,0 \\
  \hline
 \end{tabular}
 \end{center}
-    \caption{\label{CML_Seminar_Template_tab1} Table caption (Times 10; height 13 Pt; 12 above and below). Leave 12 Pt free above of the figure (use the same format for Tables, but with roman numbering). }
+    \caption{\label{CML_Seminar_Template_tab1} Selected mental, cognitive and behavioural symptoms \cite[]{Lindfors2006}. }
 \end{table}
 
-Subsequent paragraphs should have same font and layout, but with 5 mm indenting in the first line. 
-
-\begin{quote}
-Quotations with a length of more than 40 words should be put in a separate paragraph (Times 10; height 13; 2 Pt above; 2 Pt below; 5 mm indenting)
-\end{quote}
-
-
-Brands, company names, etc. should be written in capital letters (e.g., \textsc{The Coordinator}). The paper should have a length of about 16 pages. The pages should be numbered (page numbers in Helvetica 8; italic). Use a margin of 3.0 cm on the left and right side, and 2.5 cm on top and bottom. Refer to figures in the text (cf. Figure ~\ref{CML_Seminar_Template_fig1}).
+\subsection{Boundary attributes}
+The boundary of an on-call service exhibits an interesting combination of attributes. Boundary flexibility is defined by \cite[]{Piszczek2014} as the "Capacity of the boundary to be moved temporally or physically." Consequently, for the case of on-call service, the boundary flexibility has to be considered minimal. If we assume that no other worker would take the shift instead, the boundary must not be moved temporally. It must also not be moved physically, as the proximity to patients is critical and the distances to be covered need to be as short as possible. During an emergency, a time difference in minutes 
+\par
+Boundary permeability is defined by \cite[]{Hecht2009} as follows: "Reflects the extent to which an individual might be psychologically and/or behaviorally engaged in one domain, while physically located in another, or at times that are traditionally devoted to the other."
+\par
+Boundary thickness is defined by \cite[]{Ashforth2000} as the combination of boundary flexibility and boundary permeability. This means that the boundary thickness is debatable, since flexibility is minimal but permeability in contrast is high. When we separate both attributes by  
 
 
 
+% \begin{quote}
+% Quotations with a length of more than 40 words should be put in a separate paragraph (Times 10; % % height 13; 2 Pt above; 2 Pt below; 5 mm indenting)
+% \end{quote}
 
-References in the text should have the format [Author Year]. Sources with one author should be referenced as \cite[]{Gro1995}; sources with two authors like this \cite[]{MaVa1984}, and sources with more than two authors like this \cite[]{Ham2002}; if you have the page numbers, indicate them like this \cite[p. 16]{Gro1995} or this for a range \cite[pp. 16-17]{Gro1995}. 
+% Refer to figures in the text (cf. Figure ~\ref{CML_Seminar_Template_fig1}).
+
+% References in the text should have the format [Author Year]. Sources with one author should be referenced as \cite[]{Gro1995}; sources with two authors like this \cite[]{MaVa1984}, and sources with more than two authors like this \cite[]{Ham2002}; if you have the page numbers, indicate them like this \cite[p. 16]{Gro1995} or this for a range \cite[pp. 16-17]{Gro1995}. 
 
 \section{How paging technology enables high availability}
 Pagers are small devices that are designed to be dedicated to the one task of delivering text messages quickly and reliably. These messages are supposed to be short, concise and critical for the case of emergencies. Pagers are being used by hospitals, the police, energy distribution system operators and firefighters, to name some of the most important examples. Figure \ref{pager_fig1} shows an example of such a device. The interface elements on the front are very simple, with three arrow buttons for navigation and a power-on button. The display is a four-line alphanumeric monochrome display. The LCD has a back-light with adjustable contrast. It only displays the current date and time, and a message.
@@ -113,9 +115,9 @@ In the definitions, both the source and the nature of the interruption are being
 \subsection{Signalling availability in Life Domain after long periods of unavailability}
 To avoid confusion, it has to be pointed out that in the previous sections, availability described the state of being able to receive interruptions in the work domain. Now, we would like to refer to being available in the life domain instead. After a long on-call working shift with maximum unavailability to the life domain, a worker might wish to balance this period with being highly available in the period afterwards. As has been discussed, the unavailability during the working hours contributes to a considerable amount of stress, that is expressed in an abundance of symptoms. A balance could help alleviate these symptoms. To take full advantage of his availability in the life domain, a worker needs to signal this state to his social environment. The signal needs to inform not only about the state of being technically reachable but the state of explicit availability. This way, communications can be initiated from both sides instead of originating from the worker only.
 \par
-As \cite[]{Fetter2018} explain, this can impose a challenge since there is a bias of signalling unavailability instead of availability in devices and software. Examples for this in smartphones are a Do-not-disturb mode or the Airplane mode which is often being used for the same purpose. In text communication, there are typically the features of blocking another user, muting a contact's chat or a group chat, as well as disabling read confirmations. The latter one is being used to lessen the pressure of being expected to answer soon after a message was confirmed to the sender as being read. In devices, the bias becomes most obvious when evaluating sensor development and related signal processing. Examples for this are using the microphone sensor to capture voice activity or analysing the data of an accelerometer sensor the determine the activity of running. Captured voice activity might be interpreted as holding a conversation with another person. Both states, conversation and running, would reasonably be used to signal unavailability. Sometimes, this is motivated by trying to design a smartphone software feature to save battery life. In the state of unavailability, it is acceptable for the device to poll for incoming messages less frequently, which saves battery life by using the communications (e.g. WiFi) interface less and drawing less power for radio signal sending.
+As \cite[]{Fetter2018} explain, this can impose a challenge since there is a bias of signalling unavailability instead of availability in devices and software. Examples for this in smartphones are a Do-not-disturb mode or the Airplane mode, which is often being used for the same purpose. In text communication, there are typically the features of blocking another user, muting a contact's chat or a group chat, as well as disabling read confirmations. The latter one is being used to lessen the pressure of being expected to answer soon after a message was confirmed to the sender as being read. In devices, the bias becomes most obvious when evaluating sensor development and related signal processing. Examples for this are using the microphone sensor to capture voice activity or analysing the data of an accelerometer sensor the determine the activity of running. Captured voice activity might be interpreted as holding a conversation with another person. Both states, conversation and running, would reasonably be used to signal unavailability. Sometimes, this is motivated by trying to design a smartphone software feature to save battery life. In the state of unavailability, it is acceptable for the device to poll for incoming messages less frequently, which saves battery life by using the communications (e.g. WiFi) interface less and drawing less power for radio signal sending.
 
-\subsection{Implications of unavailability signalling bias}
+\subsection{Implications of the unavailability signalling bias}
 In the work of \cite[]{Birnholtz2010}, some of the negative implications of signalling unavailability are being explored. In this perspective, it is not about how users are forced to signal unavailability by the software's bias. It is about users who purposefully invent different strategies to do such thing in order to avoid unwanted conversations or meetings. Nevertheless, these strategies begin to carry many negative associations for the user whose communication or approaching efforts are being rejected. Without a counterweight that also enables users to sometimes signal explicit availability instead, these negative associations become amplified.
 In the paper, an experiment with 194 US students as participants is described. The authors wanted to find out how the users find ways of deceptive texting to avoid unwanted social interactions. The strategies were termed "butler lies", hinting at the role butlers used to employ for their boss. When 
 undesired visitors requested to meet their boss, the butlers would tell them that he or she was busy when in fact the interaction was merely unwanted. Birnholtz et al. discovered three main strategies:
@@ -126,29 +128,29 @@ undesired visitors requested to meet their boss, the butlers would tell them tha
 \end{itemize}
 
 
-\subsection*{Books:} 
-
-\cite[]{Ham2002, MaVa1984}
-
-\subsection*{Journals:}
-
-\cite[]{Gro1995}
-
-\subsection*{On-line Sources:} 
-
-\cite[]{Bal1994}
-
-\subsection*{Conference Proceedings:} 
-
-\cite[]{GrPr2003}
-
-\subsection*{Ph.D. and Master's theses:}
-
-\cite[]{Dou1996}
-
-\subsection*{Reports:} 
-
-\cite[]{BeMa1993}
+%\subsection*{Books:} 
+%
+%\cite[]{Ham2002, MaVa1984}
+%
+%\subsection*{Journals:}
+%
+%\cite[]{Gro1995}
+%
+%\subsection*{On-line Sources:} 
+%
+%\cite[]{Bal1994}
+%
+%\subsection*{Conference Proceedings:} 
+%
+%\cite[]{GrPr2003}
+%
+%\subsection*{Ph.D. and Master's theses:}
+%
+%\cite[]{Dou1996}
+%
+%\subsection*{Reports:} 
+%
+%\cite[]{BeMa1993}
 
 
 %\section*{Acknowledgements}
